[metadata]
name = tpqtlib
description = Collection of Python utilities modules to work with PySide/PyQt and DCCs
long_description = file: README.rst
long_description_content_type = text/x-rst
version = attr: tpQtLib.__version__.__version__
license = MIT
license_file = LICENSE
author = Tomas Poveda
author_email = tpovedatd@gmail.com
url = https://github.com/tpoveda/tpQtLib

[options]
zip_safe = False
package_dir=
    =source
packages=find:

[options.packages.find]
where=source

[options.extras_require]
dev =
    wheel

test =
    pytest

[bdist_wheel]
universal=1