[metadata]
name = tpDcc-libs-qt
description = Collection of Python utilities modules to work with PySide/PyQt and DCCs
long_description = file: README.rst
long_description_content_type = text/x-rst
version = attr: tpDcc.libs.qt.__version__.__version__
license = MIT
license_file = LICENSE
author = Tomas Poveda
author_email = tpovedatd@gmail.com
url = https://github.com/tpDcc/tpDcc-libs-qt

[options]
zip_safe = False
include_package_data = true
packages=find:
install_requires =
    PySide;python_version <= '3.4' and sys_platform == 'win32'
    PySide2;python_version > '3.4'  and sys_platform == 'win32'
    PySide;python_version < '2.7' and sys_platform == 'darwin'
    PySide2;python_version >= '2.7'  and sys_platform == 'darwin'
    tpDcc-libs-python
    tpDcc-core
    Qt.py
    aenum
    scandir
    pathlib2
    pysvg

[options.extras_require]
dev =
    wheel

test =
    pytest

[bdist_wheel]
universal=1